k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic-prod
  labels:
    app.kubernetes.io/name: petclinic
    app.kubernetes.io/environment: production-like
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
