k8s/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: petclinic-app
  namespace: petclinic-prod
  labels:
    app.kubernetes.io/name: petclinic
    app.kubernetes.io/component: application
spec:
  type: NodePort
  selector:
    app.kubernetes.io/name: petclinic
    app.kubernetes.io/component: application
  ports:
    - name: http
      port: 80
      targetPort: http
      nodePort: 30080
