k8s/base/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: petclinic-prod
  labels:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
spec:
  clusterIP: None
  selector:
    app.kubernetes.io/name: postgres
    app.kubernetes.io/component: database
  ports:
    - name: postgres
      port: 5432
      targetPort: postgres
