k8s/base/app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: petclinic-ingress
  namespace: petclinic-prod
  labels:
    app.kubernetes.io/name: petclinic
    app.kubernetes.io/component: ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: petclinic-app
                port:
                  number: 80
