k8s/base/app-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: petclinic-app-network-policy
  namespace: petclinic-prod
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: petclinic
      app.kubernetes.io/component: application
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allows traffic from NodePort, port-forward, or an ingress controller to the app.
    - ports:
        - protocol: TCP
          port: 8080
  egress:
    # Allows the app to connect to PostgreSQL.
    - to:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: postgres
              app.kubernetes.io/component: database
      ports:
        - protocol: TCP
          port: 5432

    # Allows DNS resolution.
    - to:
        - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
        - protocol: TCP
          port: 53
